--- a/PROPPS/WebContent/pages/compte.html
+++ b/PROPPS/WebContent/pages/compte.html
@@ -257,7 +257,7 @@
 											</div>
 											<div class="control-group">
 												<div class="controls">
-													<button type="submit" class="btn btn-primary">Modifier</button>
+													<button type="submit" class="btn btn-primary">Ajouter</button>
 												</div>
 											</div>
 										</div>
@@ -640,7 +640,7 @@
 										</div>
 									</div>
 								</fieldset>
-									<legend>Modifier vos domaines d'expertise</legend>
+								<legend>Modifier vos domaines d'expertise</legend>
 								<!-- L'adresse du lien contient l'identifiant du domaine d'expertise à supprimer -->
 								<table>
 									<tbody>
