--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -68,7 +68,7 @@
 							class="input-block-level" name="password"
 							placeholder="Mot de passe"> <label class="checkbox">
 							<input type="checkbox" name="remember" value="1"> Rester
-							connecté - <a href="#">Mot de passe oublié?</a>
+							connecté<!-- - <a href="#">Mot de passe oublié?</a> -->
 						</label>
 						<button class="btn btn-large btn-primary" type="submit">Connexion</button>
 					</form>
