--- a/PROPPS/WebContent/pages/recrutement.html
+++ b/PROPPS/WebContent/pages/recrutement.html
@@ -164,7 +164,7 @@
 										<span class="add-on"><i class="icon-calendar"></i></span>
 									</div>
 									<a href="#" rel="tooltip" data-placement="top"
-										title="Ne renseigner une date que si vous étes en Prestation"><i
+										title="Ne renseigner une date que si vous recherchez un poste de type : Prestation"><i
 										class="icon-info-sign"></i></a>
 								</div>
 							</div>
