--- a/PROPPS/WebContent/pages/entreprise.html
+++ b/PROPPS/WebContent/pages/entreprise.html
@@ -75,10 +75,10 @@
 						<div id="detail_entreprise">
 
 							<h2>Entreprise, Inc.</h2>
+							<h3>Nom, Prénom</h3>
 							<br>
 							<p class="lead">
-								<i class="icon-home"></i> Adresse<br> Ville, Code postal<br>
-								<i class="icon-envelope"></i><a href="mailto:#">contact@entreprise.com</a>
+								<i class="icon-home"></i> Adresse<br> Ville, Code postal<br>	
 							</p>
 						</div>
 					</div>
@@ -180,7 +180,11 @@
 										data-date-format="dd/mm/yyyy">
 										<input class="span2" size="16" type="text" value="04/02/2013">
 										<span class="add-on"><i class="icon-calendar"></i></span>
+										
 									</div>
+									<a href="#" rel="tooltip" data-placement="right"
+										title="Ne renseigner une date que si vous recherchez un poste de type : Prestation"><i
+										class="icon-info-sign"></i></a>
 								</div>
 							</div>
 							<div class="control-group">
