--- a/PROPPS/WebContent/pages/user.html
+++ b/PROPPS/WebContent/pages/user.html
@@ -195,12 +195,12 @@
 					</div>
 				</div>
 				<div class="span3">
+					<div id="title">
+						<img src="../img/contact.png">
+						<h3>Liste des contacts</h3>
+					</div>
+					<div id="listContact">
 
-					<div id="last-add">
-						<div id="title">
-							<img src="../img/contact.png">
-							<h3>Liste des contacts</h3>
-						</div>
 						<div id="contact">
 							<img src="../img/people.png" width="64">
 							<div id="description_contact">
