--- a/PROPPS/WebContent/pages/result_recherche_membre.html
+++ b/PROPPS/WebContent/pages/result_recherche_membre.html
@@ -109,20 +109,16 @@
 							<legend>Selectionnez vos critères de recherche</legend>
 							<div class="container">
 								<div class="row">
-									<div class="span3">
+									<div class="span4">
 										<label class="control-label" for="inputNom">Nom</label> <input
 											type="text" name="nom" id="inputNom" placeholder="">
 									</div>
-									<div class="span3">
+									<div class="span4">
 										<label class="control-label" for="inputPrenom">Prénom</label>
-										<input type="text" name="prenom" id="inputPreom"
+										<input type="text" name="prenom" id="inputPrenom"
 											placeholder="">
 									</div>
-									<div class="span3">
-										<label class="control-label" for="inputEmail">Email</label> <input
-											type="text" name="email" id="inputEmail" placeholder="">
-									</div>
-									<div class="span3">
+									<div class="span4">
 										<label class="control-label" for="inputSociete">Société</label>
 										<input type="text" name="societe" id="inputSociete"
 											placeholder="">
