--- a/PROPPS/WebContent/pages/parametre.html
+++ b/PROPPS/WebContent/pages/parametre.html
@@ -123,14 +123,7 @@
 										placeholder="Orsay">
 								</div>
 							</div>
-							<div class="control-group">
-								<label class="control-label" for="inputPhoto">Photo de
-									profil</label>
-								<div class="controls">
-									<input type="text" name="photoProfil" id="inputPhoto"
-										placeholder="Orsay">
-								</div>
-							</div>
+
 							<div class="control-group">
 								<div class="controls">
 									<button type="submit" class="btn btn-primary">Valider</button>
@@ -151,6 +144,14 @@
 										placeholder="johndoe@yahoo.fr">
 								</div>
 
+							</div>
+							<div class="control-group">
+								<label class="control-label" for="inputOldPassword">Ancien
+									mot de passe</label>
+								<div class="controls">
+									<input type="password" name="password" id="inputOldPassword"
+										placeholder="Password">
+								</div>
 							</div>
 							<div class="control-group">
 								<label class="control-label" for="inputPassword">Mot de
