--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -52,13 +52,16 @@
 			<div class="row">
 				<div class="span8">
 					<div class="page-header">
-						<h1>Réseau Professionnel Paris-Sud</h1>
+						<h1>Réseau Professionnel Polytech Paris-Sud</h1>
 					</div>
 					<p class="lead">Bienvenue sur le réseau Professionnel de
 						Polytech Paris-Sud.</p>
-					<p class="lead">Il s'agit d'un réseau social permettant de
-						recenser des contacts professionnels dans le but d'obtenir un
-						emploi ou de la main d'oeuvre compétente.</p>
+					<p class="lead">Il s'agit du réseau social mis à votre
+						disposition pour booster votre carrière ou constituer un
+						recrutement de qualité. En tant que membre, il permet de recenser
+						les contacts professionnels qui vous permettront d'obtenir un
+						emploi, et en tant que recruteur ce réseau vous met à disposition
+						des candidats compétents et correspondant à vos besoins.</p>
 				</div>
 				<div class="span4">
 					<form class="form-signin" action="connect" method="post">
