--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -37,7 +37,7 @@
 				<div class="span12">
 					<div class="page-header">
 						<h1>
-							Réseau Professionnel Paris-Sud<small> Inscription membre</small>
+							Réseau Professionnel Polytech Paris-Sud<small> Inscription membre</small>
 						</h1>
 					</div>
 					<div id="contents">
