--- a/PROPPS/WebContent/pages/inscription_ent.html
+++ b/PROPPS/WebContent/pages/inscription_ent.html
@@ -36,7 +36,7 @@
 				<div class="span12">
 					<div class="page-header">
 						<h1>
-							Réseau Professionnel Paris-Sud<small> Inscription
+							Réseau Professionnel Polytech Paris-Sud<small> Inscription
 								entreprise</small>
 						</h1>
 					</div>
