update description inscription

--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -37,15 +37,19 @@
 				<div class="span12">
 					<div class="page-header">
 						<h1>
-							Réseau Professionnel Polytech Paris-Sud<small> Inscription membre</small>
+							Réseau Professionnel Polytech Paris-Sud<small>
+								Inscription membre</small>
 						</h1>
 					</div>
 					<div id="contents">
-						<p>En vous inscrivant à ce site, vous aurez accès à tous les
-							postes ouverts par les recruteurs membre de ce site. Ceux-ci
-							pourront accéder librement à votre profil.</p>
+						<p>En vous inscrivant à ce réseau, vous indiquerez votre
+							disponibilité professionnelle qui sera visible par une grande
+							base de données de recruteurs. Ces chasseurs de tête pourront
+							accéder librement à votre profil et vous contacterons pour vos
+							qualités. Inscrivez-vous dès maintenant.</p>
 
-						<form id="formInscription" class="form-horizontal" action="../registUser" method="post">
+						<form id="formInscription" class="form-horizontal"
+							action="../registUser" method="post">
 							<fieldset>
 								<div class="alert alert-info">
 
