--- a/PROPPS/WebContent/pages/inscription_ent.html
+++ b/PROPPS/WebContent/pages/inscription_ent.html
@@ -36,21 +36,17 @@
 				<div class="span12">
 					<div class="page-header">
 						<h1>
-							Réseau Professionnel Polytech Paris-Sud<small> Inscription
-								entreprise</small>
+							Réseau Professionnel Polytech Paris-Sud<small>
+								Inscription entreprise</small>
 						</h1>
 					</div>
 					<div id="contents">
-						<p>
-							En inscrivant votre entreprise sur notre site, vous aurez la
-							possibilité de poster à tout moment des informations à propos de
-							celle ci (évènements, offres d'emplois, etc...)<br> Afin
-							d'inscrire votre entreprise sur ce site, il vous suffit de
-							renseigner son nom et une adresse mail/compte utilisateur à
-							laquelle nous pourrons vous contacter.<br> Il vous est
-							également possible d'ajouter toutes informations vous semblant
-							utiles (domaine d'activté, localisation de l'entreprise,etc...)
-						</p>
+						<p>En représentant votre entreprise sur le réseau, vous aurez
+							accès à une grande base de données de candidats qui correspondent
+							le mieux à vos besoins. Grâce à notre outil de fonction de
+							recrutement, vous pourrez ajuster votre recherche avec précision.
+							Pour bénéficier de ce service, il vous suffit de renseigner les
+							informations du formulaire ci-dessous.</p>
 
 						<form class="form-horizontal" action="../registRecruiter"
 							method="post">
