--- a/PROPPS/WebContent/pages/parametre.html
+++ b/PROPPS/WebContent/pages/parametre.html
@@ -173,7 +173,8 @@
 										id="inputConfirmPassword" placeholder="Password">
 								</div>
 							</div>
-
+							<input id="typeaheadField" name="typeaheadField" type="text"
+								placeholder="Start Typing">
 							<div class="control-group">
 								<div class="controls">
 									<button type="submit" class="btn btn-primary">Valider</button>
@@ -186,31 +187,42 @@
 			</div>
 		</div>
 
+	</div>
 
 
-
-		<div id="footer">
-			<div class="container">
-				<p class="muted credit">&copy;PROPPS 2013</p>
-			</div>
+	<div id="footer">
+		<div class="container">
+			<p class="muted credit">&copy;PROPPS 2013</p>
 		</div>
+	</div>
 
-		<!-- Le javascript
+	<!-- Le javascript
     ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="http://platform.twitter.com/widgets.js"
-			type="text/javascript"></script>
-		<script src="../js/jquery-1.9.0.js"></script>
-		<script src="../js/bootstrap.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="http://platform.twitter.com/widgets.js"
+		type="text/javascript"></script>
+	<script src="../js/jquery-1.9.0.js"></script>
+	<script src="../js/bootstrap.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 
-		<script>
-			$('.nav-list').scrollspy();
-			$(document).off('touchstart.dropdown.data-api');
-			$('.dropdown-toggle').dropdown();
-			$(function() {
-				$("[rel='tooltip']").tooltip();
-			});
-		</script>
+	<script>
+		$('.nav-list').scrollspy();
+		$(document).off('touchstart.dropdown.data-api');
+		$('.dropdown-toggle').dropdown();
+		$(function() {
+			$("[rel='tooltip']").tooltip();
+		});
+		$("#typeaheadField").typeahead(
+				{
+					minLength : 2,
+					items : 6,
+					source : [ "Alabama", "Alaska", "Arizona", "Arkansas",
+							"California", "Colorado" ]
+				});
+		$("#typeaheadField").on(
+				'focus',
+				$("#typeaheadField").typeahead.bind($("#typeaheadField"),
+						'lookup'));
+	</script>
 </body>
 </html>
