--- a/PROPPS/WebContent/pages/inscription1.html
+++ b/PROPPS/WebContent/pages/inscription1.html
@@ -83,7 +83,7 @@
 										passe</label>
 									<div class="controls">
 										<input type="password" name="password" id="inputPassword"
-											placeholder="Password"> <a href="#" rel="tooltip"
+											placeholder="Mot de passe"> <a href="#" rel="tooltip"
 											data-placement="right"
 											title="Le mot de passe doit contenir au minimum une majuscule 
 									et un chiffre. Le mot de passe doit avoir une longueur minimum de 8 caractères"><i
@@ -95,7 +95,7 @@
 										le mot de passe</label>
 									<div class="controls">
 										<input type="password" name="confirmPassword"
-											id="inputConfirmPassword" placeholder="Password">
+											id="inputConfirmPassword" placeholder="Mot de passe">
 									</div>
 								</div>
 
