Auto-Completion + Init auto

--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -80,7 +80,7 @@
 					</div>
 					<a href="pages/inscription1.html"
 						class="btn btn-large  btn-block btn-primary">En tant que
-						Membre</a> <a href="pages/inscription_ent.html"
+						Membre</a> <a href="autoCompletion"
 						class="btn btn-large btn-block">En tant que Recruteur</a>
 
 
