--- a/PROPPS/WebContent/pages/inscription_ent.html
+++ b/PROPPS/WebContent/pages/inscription_ent.html
@@ -99,7 +99,7 @@
 										la société</label>
 									<div class="controls">
 										<input type="text" id="inputSociete" name="inputSociete"
-											placeholder="Polytech">
+											placeholder="Polytech" data-provide="typeahead" onchange="../autoCompletion" >
 									</div>
 								</div>
 								<div class="control-group">
