--- a/PROPPS/WebContent/index.html
+++ b/PROPPS/WebContent/index.html
@@ -69,10 +69,7 @@
 						<input type="text" class="input-block-level" name="email"
 							placeholder="Adresse email"> <input type="password"
 							class="input-block-level" name="password"
-							placeholder="Mot de passe"> <label class="checkbox">
-							<input type="checkbox" name="remember" value="1"> Rester
-							connecté<!-- - <a href="#">Mot de passe oublié?</a> -->
-						</label>
+							placeholder="Mot de passe">
 						<button class="btn btn-large btn-primary" type="submit">Connexion</button>
 					</form>
 					<div class="page-header">
